# qwrt

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  polyfill.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
cmake/: libqwrt.pc.in
docs/: compat-checker.md  esp32s3-design.md  index.md  package-lock.json  package.json  pal-design.md  playground.md  qwrt-architecture-design.md
docs/.vitepress/: config.mjs
docs/c-api/: errors.md  eval.md  extensions.md  index.md  pal.md  runtime.md
docs/dev/: debugging.md  testing.md  website-guidelines.md
docs/guide/: build-options.md  building.md  bytecode.md  compatible-packages.md  embedding.md  event-loop.md  examples.md  execution.md  extensions.md  index.md  lifecycle.md  multi-context.md  quickstart.md
docs/js-api/: abort.md  blob.md  console.md  crypto.md  encoding.md  events.md  fetch.md  fs.md  index.md  message-channel.md  navigator.md  pal-injection.md  performance.md  storage.md  streams.md  structured-clone.md  timers.md  url.md
docs/pal/: async.md  callbacks.md  common-helpers.md  errors.md  implementing.md  index.md  interface.md  pal-freertos.md  pal-mock.md  pal-uv.md  streaming.md
docs/public/: qwrt-playground.js  qwrt-playground.wasm
docs/scripts/: generate-sitemap.mjs
docs/superpowers/: 2026-07-15-wpt-audit.md
docs/superpowers/specs/: 2026-07-09-ext-registration-design.md  2026-07-14-wpt-integration-design.md  2026-07-20-worker-wasm-composition-design.md
docs/web/: index.html
docs/zh/: compat-checker.md  index.md  playground.md
docs/zh/c-api/: errors.md  eval.md  extensions.md  index.md  pal.md  runtime.md
docs/zh/dev/: debugging.md  testing.md
docs/zh/guide/: build-options.md  building.md  bytecode.md  compatible-packages.md  embedding.md  event-loop.md  examples.md  execution.md  extensions.md  index.md  lifecycle.md  multi-context.md  quickstart.md
docs/zh/js-api/: abort.md  blob.md  console.md  crypto.md  encoding.md  events.md  fetch.md  fs.md  index.md  message-channel.md  navigator.md  pal-injection.md  performance.md  storage.md  streams.md  structured-clone.md  timers.md  url.md
docs/zh/pal/: async.md  callbacks.md  common-helpers.md  errors.md  implementing.md  index.md  interface.md  pal-freertos.md  pal-mock.md  pal-uv.md  streaming.md
examples/: CMakeLists.txt  README.md  example_bytecode.c  example_fetch.c  example_minimal.c  example_mock.c  example_storage.c  example_timers.c  qwrt_minimal.c
include/qwrt/: ext_ace_tools.h  ext_compress.h  ext_crypto.h  ext_textcodec.h  ext_wamr.h  ext_wasm3.h  qwrt.h  qwrt_debug.h  qwrt_debug_dap.h  qwrt_ext_registry.h  qwrt_pal.h  qwrt_pi.h
miniz/tests/: main.cpp
platform/: pal_common.c  pal_common.h
platform/freertos/: pal_freertos.c  pal_freertos.h
platform/mock/: pal_mock.c  pal_mock.h
platform/uv/: pal_uv.c  pal_uv.h
platform/wasm/: pal_wasm.c  pal_wasm.h
polyfill/: build.js  package-lock.json  package.json
polyfill/.omc/: project-memory.json
polyfill/.omc/state/: agent-replay-09972cd3-d134-4dea-b5c0-a0383ee1a3e0.jsonl  last-tool-error.json  subagent-tracking.json
polyfill/.omc/state/checkpoints/: checkpoint-2026-05-31T12-34-07-990Z.json
polyfill/src/: abort.js  blob-file-formdata.js  console.js  crypto-subtle.js  crypto.js  encoding.js  error-events.js  event-target.js  fetch.js  fs.js  index.js  message-channel.js  navigator.js  pal.js  performance.js  storage.js  streams.js  structured-clone.js  text-encoding.js  timers.js  url-pattern.js  url.js
quickjs-ng/.omc/: project-memory.json
quickjs-ng/.omc/state/: agent-replay-09972cd3-d134-4dea-b5c0-a0383ee1a3e0.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
quickjs-ng/.omc/state/checkpoints/: checkpoint-2026-06-01T07-00-33-572Z.json  checkpoint-2026-06-02T01-23-32-543Z.json
src/: bridge.c  context.c  debugger.c  debugger_dap.c  ext_ace_tools.c  ext_compress.c  ext_crypto.c  ext_textcodec.c  ext_wamr.c  ext_wasm3.c  ext_web_wasm.c  extension.c  polyfill_default.c  qwrt.c  qwrt_internal.h
test/: CMakeLists.txt  bench_agent.js  bench_agent_qjs.js  bench_compress.js  bench_compress_sync.js  bench_native_vs_js.js  bench_wamr_vs_node.c  bench_wamr_vs_node.js  compare_wamr_node.js  compat_check.c  test262_es2020_runner.c  test262_runner.c  test_ace_agent.c  test_ace_ai_sdk.c  test_ace_core.c  test_ace_integration.c  test_ace_real_llm.c  test_bench_native.c  test_benchmark.c  test_bridge_http.c  test_bridge_http_gtest.cpp  test_bridge_stream.c  test_bridge_stream_gtest.cpp  test_compliance.c  test_compliance_gtest.cpp  test_compress.c  test_compress_bench.c  test_compress_consistency.c  test_compress_consistency_gtest.cpp  test_compress_gtest.cpp  test_context.c  test_context_gtest.cpp  test_dap_async.c  test_dap_conditional.c  test_dap_debugger.c  test_e2e.c  test_e2e_gtest.cpp  test_extension.c  test_extension_gtest.cpp  test_fetch_httpbin.c  (+19 more)
test/.omc/state/: agent-replay-09972cd3-d134-4dea-b5c0-a0383ee1a3e0.jsonl  last-tool-error.json  subagent-tracking.json
test/.omc/state/checkpoints/: checkpoint-2026-06-01T03-47-52-570Z.json
test/wpt/: testharness.js
test/wpt/console/: console-log.any.js
test/wpt/crypto/: getRandomValues.any.js  randomUUID.any.js
test/wpt/navigator/: navigator.any.js
test/wpt/performance/: now.any.js
test/wpt/structured-clone/: structured-clone.any.js
test/wpt/timers/: setTimeout-basic.any.js
